--- a/one-music-gh-pages/index1.html
+++ b/one-music-gh-pages/index1.html
@@ -69,7 +69,7 @@
               <div class="classy-nav-container breakpoint-off">
                 <div class="container">
                   <!-- Menu -->
-                  <nav class="classy-navbar justify-content-between" id="oneMusicNav">
+                  <nav class="classy-navbar justify-content-between" id="oneMusicNav1">
 
                     <!-- Nav brand -->
                     <a href="../index.html" class="nav-brand"><img src="img/core-img/logo.png" alt=""></a>
@@ -216,7 +216,12 @@
     <div class="row justify-content-center">
       <div class="col-12 col-lg-9">
         <div class="ablums-text text-center mb-70">
-          <p>In a groundbreaking full-scale collaboration in higher education between the Chinese mainland and Hong Kong, Beijing Normal University-Hong Kong Baptist University United International College (UIC) was established in 2005. Situated in Zhuhai City within the thriving Guangdong-Hong Kong-Macao Greater Bay Area, UIC stands as the first modern college in the Chinese mainland to champion a liberal arts education. UIC is committed to enriching the higher education landscape and fostering students who possess professional acumen, whole-person development, a deep understanding of China and a global outlook.</p>
+          <p>In a groundbreaking full-scale collaboration in higher education between the Chinese mainland and Hong
+             Kong, Beijing Normal University-Hong Kong Baptist University United International College (UIC) was
+             established in 2005. Situated in Zhuhai City within the thriving Guangdong-Hong Kong-Macao Greater Bay
+             Area, UIC stands as the first modern college in the Chinese mainland to champion a liberal arts education.
+             UIC is committed to enriching the higher education landscape and fostering students who possess
+             professional acumen, whole-person development, a deep understanding of China and a global outlook.</p>
         </div>
       </div>
     </div>
@@ -320,65 +325,11 @@
     </div>
 
     <div class="row">
-
-      <!-- Single Album Area -->
-      <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-        <div class="single-album-area wow fadeInUp" data-wow-delay="100ms">
-          <div class="album-thumb">
-            <img src="img/bg-img/b1.jpg" alt="">
-            <!-- Album Price -->
-            <div class="album-price">
-              <p>$0.90</p>
-            </div>
-            <!-- Play Icon -->
-            <div class="play-icon">
-              <a href="#" class="video--play--btn"><span class="icon-play-button"></span></a>
-            </div>
-          </div>
-          <div class="album-info">
-            <a href="#">
-              <h5>Garage Band</h5>
-            </a>
-            <p>Radio Station</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Single Album Area -->
-      <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-        <div class="single-album-area wow fadeInUp" data-wow-delay="200ms">
-          <div class="album-thumb">
-            <img src="img/bg-img/b2.jpg" alt="">
-          </div>
-          <div class="album-info">
-            <a href="#">
-              <h5>Noises</h5>
-            </a>
-            <p>Buble Gum</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Single Album Area -->
-      <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-        <div class="single-album-area wow fadeInUp" data-wow-delay="300ms">
-          <div class="album-thumb">
-            <img src="img/bg-img/b3.jpg" alt="">
-          </div>
-          <div class="album-info">
-            <a href="#">
-              <h5>Jess Parker</h5>
-            </a>
-            <p>The Album</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Single Album Area -->
+      <!-- 单个专辑区域 -->
       <div class="col-12 col-sm-6 col-md-4 col-lg-2">
         <div class="single-album-area wow fadeInUp" data-wow-delay="400ms">
           <div class="album-thumb">
-            <img src="img/bg-img/b4.jpg" alt="">
+            <img src="img/bg-img/b4.jpg" alt="" data-toggle="modal" data-target="#modalNoises">
           </div>
           <div class="album-info">
             <a href="#">
@@ -389,16 +340,16 @@
         </div>
       </div>
 
-      <!-- Single Album Area -->
+      <!-- 单个专辑区域 -->
       <div class="col-12 col-sm-6 col-md-4 col-lg-2">
         <div class="single-album-area wow fadeInUp" data-wow-delay="500ms">
           <div class="album-thumb">
-            <img src="img/bg-img/b1.jpg" alt="">
-            <!-- Album Price -->
+            <img src="img/bg-img/b1.jpg" alt="" data-toggle="modal" data-target="#modalGarageBand">
+            <!-- 专辑价格 -->
             <div class="album-price">
               <p>$0.90</p>
             </div>
-            <!-- Play Icon -->
+            <!-- 播放图标 -->
             <div class="play-icon">
               <a href="#" class="video--play--btn"><span class="icon-play-button"></span></a>
             </div>
@@ -412,79 +363,149 @@
         </div>
       </div>
 
-      <!-- Single Album Area -->
+      <!-- 单个专辑区域 -->
       <div class="col-12 col-sm-6 col-md-4 col-lg-2">
         <div class="single-album-area wow fadeInUp" data-wow-delay="600ms">
           <div class="album-thumb">
-            <img src="img/bg-img/b2.jpg" alt="">
+            <img src="img/bg-img/b2.jpg" alt="" data-toggle="modal" data-target="#modalJazzVibes">
           </div>
           <div class="album-info">
             <a href="#">
-              <h5>Noises</h5>
+              <h5>Jazz Vibes</h5>
             </a>
-            <p>Buble Gum</p>
+            <p>Smooth Jazz</p>
           </div>
         </div>
       </div>
 
-      <!-- Single Album Area -->
+      <!-- 单个专辑区域 -->
       <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-        <div class="single-album-area wow fadeInUp" data-wow-delay="100ms">
+        <div class="single-album-area wow fadeInUp" data-wow-delay="700ms">
           <div class="album-thumb">
-            <img src="img/bg-img/b3.jpg" alt="">
+            <img src="img/bg-img/b3.jpg" alt="" data-toggle="modal" data-target="#modalClassicalSymphony">
           </div>
           <div class="album-info">
             <a href="#">
-              <h5>Jess Parker</h5>
+              <h5>Classical Symphony</h5>
             </a>
-            <p>The Album</p>
+            <p>Orchestra</p>
           </div>
         </div>
       </div>
 
-      <!-- Single Album Area -->
-      <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-        <div class="single-album-area wow fadeInUp" data-wow-delay="200ms">
-          <div class="album-thumb">
-            <img src="img/bg-img/b4.jpg" alt="">
-          </div>
-          <div class="album-info">
-            <a href="#">
-              <h5>Noises</h5>
-            </a>
-            <p>Buble Gum</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Single Album Area -->
-      <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-        <div class="single-album-area wow fadeInUp" data-wow-delay="300ms">
-          <div class="album-thumb">
-            <img src="img/bg-img/b1.jpg" alt="">
-            <!-- Album Price -->
-            <div class="album-price">
-              <p>$0.90</p>
+      <!-- Noises 专辑模态框 -->
+      <div class="modal fade" id="modalNoises" tabindex="-1" role="dialog" aria-labelledby="modalNoisesLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalNoisesLabel">Noises</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
-            <!-- Play Icon -->
-            <div class="play-icon">
-              <a href="#" class="video--play--btn"><span class="icon-play-button"></span></a>
+            <div class="modal-body">
+              <div class="row">
+                <div class="col-md-6">
+                  <img src="img/bg-img/b4.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-6">
+                  <p>这是一张由 Buble Gum 制作的专辑。这张专辑收录了多首动听的歌曲，适合在任何场合聆听。</p>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">退出</button>
             </div>
           </div>
-          <div class="album-info">
-            <a href="#">
-              <h5>Garage Band</h5>
-            </a>
-            <p>Radio Station</p>
+        </div>
+      </div>
+
+      <!-- Garage Band 专辑模态框 -->
+      <div class="modal fade" id="modalGarageBand" tabindex="-1" role="dialog" aria-labelledby="modalGarageBandLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalGarageBandLabel">Garage Band</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="row">
+                <div class="col-md-6">
+                  <img src="img/bg-img/b1.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-6">
+                  <p>这是一张由 Radio Station 制作的专辑。这张专辑收录了多首动感的歌曲，适合在派对或运动时播放。</p>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">退出</button>
+            </div>
           </div>
         </div>
       </div>
 
-      <!-- Single Album Area -->
+      <!-- Jazz Vibes 专辑模态框 -->
+      <div class="modal fade" id="modalJazzVibes" tabindex="-1" role="dialog" aria-labelledby="modalJazzVibesLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalJazzVibesLabel">Jazz Vibes</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="row">
+                <div class="col-md-6">
+                  <img src="img/bg-img/b2.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-6">
+                  <p>这是一张由 Smooth Jazz 制作的专辑。这张专辑收录了多首轻松愉悦的爵士乐曲，适合在放松时聆听。</p>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">退出</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Classical Symphony 专辑模态框 -->
+      <div class="modal fade" id="modalClassicalSymphony" tabindex="-1" role="dialog" aria-labelledby="modalClassicalSymphonyLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalClassicalSymphonyLabel">Classical Symphony</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="row">
+                <div class="col-md-6">
+                  <img src="img/bg-img/b3.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-6">
+                  <p>这是一张由 Orchestra 制作的专辑。这张专辑收录了多首经典的交响乐曲，适合在安静的夜晚聆听。</p>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">退出</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- 单个专辑区域 -->
       <div class="col-12 col-sm-6 col-md-4 col-lg-2">
         <div class="single-album-area wow fadeInUp" data-wow-delay="400ms">
           <div class="album-thumb">
-            <img src="img/bg-img/b2.jpg" alt="">
+            <img src="img/bg-img/b4.jpg" alt="" data-toggle="modal" data-target="#modalNoises">
           </div>
           <div class="album-info">
             <a href="#">
@@ -495,42 +516,35 @@
         </div>
       </div>
 
-      <!-- Single Album Area -->
+      <!-- 单个专辑区域 -->
       <div class="col-12 col-sm-6 col-md-4 col-lg-2">
         <div class="single-album-area wow fadeInUp" data-wow-delay="500ms">
           <div class="album-thumb">
-            <img src="img/bg-img/b3.jpg" alt="">
+            <img src="img/bg-img/b1.jpg" alt="" data-toggle="modal" data-target="#modalGarageBand">
+            <!-- 专辑价格 -->
+            <div class="album-price">
+              <p>$0.90</p>
+            </div>
+            <!-- 播放图标 -->
+            <div class="play-icon">
+              <a href="#" class="video--play--btn"><span class="icon-play-button"></span></a>
+            </div>
           </div>
           <div class="album-info">
             <a href="#">
-              <h5>Jess Parker</h5>
+              <h5>Garage Band</h5>
             </a>
-            <p>The Album</p>
+            <p>Radio Station</p>
           </div>
         </div>
       </div>
 
-      <!-- Single Album Area -->
-      <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-        <div class="single-album-area wow fadeInUp" data-wow-delay="600ms">
-          <div class="album-thumb">
-            <img src="img/bg-img/b4.jpg" alt="">
-          </div>
-          <div class="album-info">
-            <a href="#">
-              <h5>Noises</h5>
-            </a>
-            <p>Buble Gum</p>
-          </div>
-        </div>
-      </div>
 
     </div>
-
     <div class="row">
       <div class="col-12">
         <div class="load-more-btn text-center wow fadeInUp" data-wow-delay="300ms">
-          <a href="#" class="btn oneMusic-btn">Load More <i class="fa fa-angle-double-right"></i></a>
+          <a href="https://www.uic.edu.cn/" class="btn oneMusic-btn">Load More <i class="fa fa-angle-double-right"></i></a>
         </div>
       </div>
     </div>
@@ -916,7 +930,9 @@
           Copyright &copy;<script>document.write(new Date().getFullYear())</script>
           All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
                 href="https://colorlib.com" target="_blank">Colorlib</a>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        </p>
+
       </div>
 
       <div class="col-12 col-md-6">
@@ -946,7 +962,7 @@
 <script src="js/plugins/plugins.js"></script>
 <!-- Active js -->
 <script src="js/active.js"></script>
-    <script src="js/autoplay.js"></script>
+<script src="js/autoplay.js"></script>
 <script>
 // 页面加载时执行
 window.addEventListener('load', function () {
